force-app/main/default/objects/Application_Form_Settings__c/Application_Form_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Application Form Settings</label>
</CustomObject>