force-app/main/default/objects/Application_Form_Settings__c/fields/App_Name_Seq__c.field-meta.xml
<CustomField>
    <fullName>App_Name_Seq__c</fullName>
    <label>App Name Seq</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>