force-app/main/default/objects/Application_Form_Settings__c/fields/Application_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Application_Expiry_Days__c</fullName>
    <label>Application Expiry Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>