force-app/main/default/objects/Application_Form_Settings__c/fields/CC_HOME_OWNER_INTEREST_RATE__c.field-meta.xml
<CustomField>
    <fullName>CC_HOME_OWNER_INTEREST_RATE__c</fullName>
    <defaultValue>29.99</defaultValue>
    <label>CC HOME OWNER INTEREST RATE</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>