force-app/main/default/objects/Application_Form_Settings__c/fields/CC_PREFERRED_PARTNER_INTEREST_RATE_CODE__c.field-meta.xml
<CustomField>
    <fullName>CC_PREFERRED_PARTNER_INTEREST_RATE_CODE__c</fullName>
    <label>CC PREFERRED PARTNER INTEREST RATE CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>