force-app/main/default/objects/Application_Form_Settings__c/fields/CC_RENTAL_INTEREST_RATE__c.field-meta.xml
<CustomField>
    <fullName>CC_RENTAL_INTEREST_RATE__c</fullName>
    <defaultValue>34.99</defaultValue>
    <label>CC RENTAL INTEREST RATE</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>