force-app/main/default/objects/Application_Form_Settings__c/fields/Credit_Card_Disclosure_URL__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Disclosure_URL__c</fullName>
    <label>Credit Card Disclosure URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>