force-app/main/default/objects/Application_Form_Settings__c/fields/Email_Authentication_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Email_Authentication_Expiry_Days__c</fullName>
    <label>Email Authentication Expiry Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>