force-app/main/default/objects/Application_Form_Settings__c/fields/InterestRate_BKCP__c.field-meta.xml
<CustomField>
    <fullName>InterestRate_BKCP__c</fullName>
    <description>Interest Rate for BKCP &lt; 1 year</description>
    <label>InterestRate BKCP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>