force-app/main/default/objects/Application_Form_Settings__c/fields/MB_CC_Preferred_Partner_Disclosure_URL__c.field-meta.xml
<CustomField>
    <fullName>MB_CC_Preferred_Partner_Disclosure_URL__c</fullName>
    <label>MB CC Preferred Partner Disclosure URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>