force-app/main/default/objects/Application_Form_Settings__c/fields/No_Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>No_Offer_Code__c</fullName>
    <label>No Offer Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>