force-app/main/default/objects/Application_Form_Settings__c/fields/Owner_Interest_2__c.field-meta.xml
<CustomField>
    <fullName>Owner_Interest_2__c</fullName>
    <label>Owner Interest 2</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>