force-app/main/default/objects/Application_Form_Settings__c/fields/Owner_Slab_1__c.field-meta.xml
<CustomField>
    <fullName>Owner_Slab_1__c</fullName>
    <inlineHelpText>Interest Rate 1 for greate than or equal Credit Score</inlineHelpText>
    <label>Owner Slab 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>