force-app/main/default/objects/Application_Form_Settings__c/fields/Owner_Slab_2__c.field-meta.xml
<CustomField>
    <fullName>Owner_Slab_2__c</fullName>
    <inlineHelpText>Owner Interest Rate 1 for lower Credit Score and Owner Interest rate 2 for greater than or equal Credit Score</inlineHelpText>
    <label>Owner Slab 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>