force-app/main/default/objects/Application_Form_Settings__c/fields/Owner_Slab_3__c.field-meta.xml
<CustomField>
    <fullName>Owner_Slab_3__c</fullName>
    <inlineHelpText>Interest Rate 2 for lower Credit Score and Interest rate 3 for greater than or equal Credit Score</inlineHelpText>
    <label>Owner Slab 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>