force-app/main/default/objects/Application_Form_Settings__c/fields/Peoples_Trust_URL__c.field-meta.xml
<CustomField>
    <fullName>Peoples_Trust_URL__c</fullName>
    <description>Peoples Trust URL</description>
    <inlineHelpText>Peoples Trust URL</inlineHelpText>
    <label>Peoples Trust URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>