force-app/main/default/objects/Application_Form_Settings__c/fields/Power_Curve_Password__c.field-meta.xml
<CustomField>
    <fullName>Power_Curve_Password__c</fullName>
    <label>Power Curve Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>