force-app/main/default/objects/Application_Form_Settings__c/fields/Power_Curve_Username__c.field-meta.xml
<CustomField>
    <fullName>Power_Curve_Username__c</fullName>
    <label>Power Curve Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>