force-app/main/default/objects/Application_Form_Settings__c/fields/Rent_Interest_3__c.field-meta.xml
<CustomField>
    <fullName>Rent_Interest_3__c</fullName>
    <label>Rent Interest 3</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>