force-app/main/default/objects/Application_Form_Settings__c/fields/Rent_Slab_1__c.field-meta.xml
<CustomField>
    <fullName>Rent_Slab_1__c</fullName>
    <inlineHelpText>Rent Interest Rate 1 for greater than or equal credit score</inlineHelpText>
    <label>Rent Slab 1</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>