force-app/main/default/objects/Application_Form_Settings__c/fields/Rent_Slab_2__c.field-meta.xml
<CustomField>
    <fullName>Rent_Slab_2__c</fullName>
    <inlineHelpText>Rent Interest Rate 1 for lower credit score and Rent Interest Rate 2 for greater thanor equal credit score</inlineHelpText>
    <label>Rent Slab 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>