force-app/main/default/objects/Application_Form_Settings__c/fields/Rent_Slab_3__c.field-meta.xml
<CustomField>
    <fullName>Rent_Slab_3__c</fullName>
    <inlineHelpText>Rent Interest Rate 2 for lower credit score and Rent Interest Rate 3 for greater than or equal credit score</inlineHelpText>
    <label>Rent Slab 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>