force-app/main/default/objects/Application_Form_Settings__c/fields/Request_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Request_Timeout__c</fullName>
    <label>Request Timeout (milliseconds)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>