force-app/main/default/objects/Application_Form_Settings__c/fields/Run_Application_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Application_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Run Application Trigger</label>
    <type>Checkbox</type>
</CustomField>