force-app/main/default/objects/Application_Form_Settings__c/fields/Trans_Union_Web_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>Trans_Union_Web_Service_URL__c</fullName>
    <label>Trans Union Web Service URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>