force-app/main/default/objects/Application_Form_Settings__c/fields/User_Verification_Site_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Verification_Site_Profile_Id__c</fullName>
    <label>User Verification Site Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>